RESOLVED FIXED197299
Trying to load a main resource outside the sandbox should not crash the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=197299
Summary Trying to load a main resource outside the sandbox should not crash the WebCo...
Chris Dumez
Reported 2019-04-25 15:44:37 PDT
Trying to load a main resource outside the sandbox should not crash the WebContent process. We should simply ignore the load and log an error message.
Attachments
Patch (1.88 KB, patch)
2019-04-25 15:46 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-04-25 15:44:54 PDT
Chris Dumez
Comment 2 2019-04-25 15:46:18 PDT
Geoffrey Garen
Comment 3 2019-04-25 16:31:32 PDT
Comment on attachment 368279 [details] Patch r=me Can we API test this?
Chris Dumez
Comment 4 2019-04-25 16:40:02 PDT
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 368279 [details] > Patch > > r=me > > Can we API test this? Last I checked, our API test runner was not sandboxed. Do you believe this has changed?
Chris Dumez
Comment 5 2019-04-25 16:40:47 PDT
(In reply to Chris Dumez from comment #4) > (In reply to Geoffrey Garen from comment #3) > > Comment on attachment 368279 [details] > > Patch > > > > r=me > > > > Can we API test this? > > Last I checked, our API test runner was not sandboxed. Do you believe this > has changed? According to rdar://problem/42638129 which I filed a while back, this has not been fixed yet.
WebKit Commit Bot
Comment 6 2019-04-25 17:17:28 PDT
Comment on attachment 368279 [details] Patch Clearing flags on attachment: 368279 Committed r244670: <https://trac.webkit.org/changeset/244670>
WebKit Commit Bot
Comment 7 2019-04-25 17:17:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.