Trying to load a main resource outside the sandbox should not crash the WebContent process https://bugs.webkit.org/show_bug.cgi?id=197299 <rdar://problem/49808042>

Reviewed by Geoffrey Garen.

Trying to load a main resource outside the sandbox should not crash the WebContent process. We should
simply ignore the load and log an error message.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationAction):


Canonical link: https://commits.webkit.org/211510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244670 268f45cc-cd09-0410-ab3c-d52691b4dbfc